<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/light_green"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"

            app:srcCompat="@drawable/icon_check_circle" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_finish_case_cylinder_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_extra_title"
        android:textColor="@color/grey_800"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_finish_case_cylinder_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_finish_case_cylinder_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_extra_body"
        android:textColor="@color/grey_600"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_finish_case_cylinder_body"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_finish_case_cylinder_10_prompt"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cylinder_10_kg" />

        <EditText
            android:id="@+id/dialog_finish_case_cylinder_10_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cylinder_quantity_hint"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_finish_case_cylinder_20_prompt"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cylinder_20_kg" />

        <EditText
            android:id="@+id/dialog_finish_case_cylinder_20_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cylinder_quantity_hint"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_finish_case_cylinder_30_prompt"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cylinder_30_kg" />

        <EditText
            android:id="@+id/dialog_finish_case_cylinder_30_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cylinder_quantity_hint"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_finish_case_cylinder_45_prompt"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cylinder_45_kg" />

        <EditText
            android:id="@+id/dialog_finish_case_cylinder_45_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cylinder_quantity_hint"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout4"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_finish_case_cylinder_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_cancel"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_finish_cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialog_finish_case_cylinder_btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_accept"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_finish_accept"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>