<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Quantity Label -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/icon_check_circle" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_finish_order_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_extra_title"
        android:textColor="@color/grey_800"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_finish_order_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_finish_order_prompt"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_extra_body"
        android:textColor="@color/grey_600"
        android:textSize="15sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_finish_case_prompt_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_finish_order_body"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_finish_case_tv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:hint="@string/prompt_detail_operator_tank"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_finish_case_prompt" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_finish_case_prompt_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_finish_case_prompt_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_finish_case_prompt_quantity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_finish_case_tv_ticket_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:hint="@string/prompt_detail_operator_ticket"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_finish_case_prompt" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_finish_case_prompt_ticket"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/dialog_finish_case_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_finish_case_prompt_ticket"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/dialog_finish_case_btn_accept"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_cancel"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_finish_cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialog_finish_case_btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/dialog_finish_case_prompt_ticket"
            android:layout_below="@+id/dialog_finish_case_prompt_ticket"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_accept"
            android:backgroundTint="@color/light_green"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/dialog_finish_accept"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
