<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/icon_eye" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_review_case_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_review"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_review_order"
        android:textColor="@color/grey_800"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_review_case_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_review_case_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_review_order_prompt"
        android:textColor="@color/grey_600"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/dialog_review_case_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_review_case_body"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_review_case_spinner"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/dialog_review_case_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_cancel"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_finish_cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialog_review_case_button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_review"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/dialog_finish_accept"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>