<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/icon_check_circle" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_new_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dialog_new_order_title"
        android:textColor="@color/grey_800"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_new_order_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_new_order_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dialog_new_order_body"
        android:textAlignment="center"
        android:textColor="@color/grey_600"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_new_order_subtitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp">

        <Button
            android:id="@+id/dialog_new_order_btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_accept"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_finish_accept"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>

